Change permalinks to not include category

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ exclude: []
 # Custom data, available through {{ site.<variable> }}
 base_uri: "http://burgestrand.se"
 title: "by Kim Burgestrand"
+
+# Don not include categories in post permalinks
+permalink: /articles/:title.html
