--- a/_src/Rakefile
+++ b/_src/Rakefile
@@ -9,6 +9,7 @@ base_dir = '../'
 sass_dir = File.join(src_dir, 'stylesheets')
 css_dir = File.join(base_dir, 'stylesheets', 'compiled')
 output_style = :nested
+line_comments = false
 
 # Haml config
 haml_config = {
@@ -26,29 +27,29 @@ namespace :compile do
     puts "[Compiling SASS]".blue
     system 'bundle exec compass compile -c Rakefile'
   end
-  
+
   desc "Compiles all HAML to HTML into main dir."
   task :haml do
     puts "[Compiling HAML]".blue
-    
+
     # Find HAMLs and their respective HTMLs
     hamls = Dir[File.join(src_dir, '**', '*.haml')]
     htmls = hamls.map { |input| input.gsub(src_dir, base_dir).gsub(/haml\z/, 'html') }
     files = hamls.zip(htmls)
-        
+
     # Recompile HTMLs that are old!
     count = files.size.to_s
     files.each_with_index do |(input, output), i|
       tag = "[#{i+1}/#{count}]"
-      
+
       if FileUtils.uptodate?(output, [input])
         puts "#{tag} no change for #{input}".white
         next
       end
-      
+
       # Make directory if necessary
       FileUtils.mkpath File.dirname(output)
-      
+
       puts "#{tag} #{input} => #{output}".green
       engine = Haml::Engine.new IO.read(input), haml_config.merge(:filename => input)
       File.open(output, 'w') { |f| f.write(engine.render) }
@@ -62,19 +63,19 @@ module ConsoleColors
   def green
     colorize "\e[1m\e[32m"
   end
-  
+
   def white
     colorize "\e[37m"
   end
-  
+
   def blue
     colorize "\e[34m"
   end
-  
+
   def bright
     colorize "\e[1m"
   end
-  
+
   def colorize(color_code)
     "#{color_code}#{self}\e[0m"
   end
