--- a/_src/Procfile
+++ b/_src/Procfile
@@ -1,3 +1,3 @@
-jekyll:  bundle exec jekyll ../ ../_site --server --auto --pygments --server $PORT
+jekyll:  bundle exec jekyll ../ ../_site --auto --pygments --server $PORT
 compass: bundle exec compass watch . -c Rakefile
 haml:    bundle exec watchr haml.watchr
