--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 #
 
 # Maruku for extensions & definition lists
-markdown: maruku
+markdown: kramdown
 # N posts per page
 paginate: 10
 # List of directories to exclude in Jekyll
 exclude: []
 
 # Custom data, available through {{ site.<variable> }}
-base_uri: "http://burgestrand.se"
+base_uri: "http://www.burgestrand.se"
 title: "by Kim Burgestrand"
 
 # Don not include categories in post permalinks
