--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ gems:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-paginate
+  - jekyll-sass-converter
 
 jekyll-mentions:
     base_url: https://github.com
