Add rubygems social icon.

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ social:
   github: burgestrand
   # medium: burgestrand
   email: kim@burgestrand.se
+  rubygems: burgestrand
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
