Update README and footer.

--- a/_config.yml
+++ b/_config.yml
@@ -67,4 +67,4 @@ gems:
 jekyll-mentions:
     base_url: https://github.com
 
-exclude: [README.md, Gemfile, Gemfile.lock, CNAME]
+exclude: [README.md, Gemfile, Gemfile.lock, CNAME, bin/]
