Adjust author description

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ defaults:
 
 # Miscellaneous
 author: Kim Burge Strand
-description: This space is intentionally not left blank.
+description: A developer that occasionally creates things that are not code, and puts some of them here.
 
 title: Kim Burge Strand's website
 # description: ""
