Everything is HTTPS!

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: A developer that occasionally creates things that are not code, and
 
 title: Kim Burgestrand's website
 # description: ""
-url: http://burgestrand.se
+url: https://burgestrand.se
 social:
   links:
     - https://github.com/Burgestrand
