Post about today!

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,7 @@ defaults:
 # Miscellaneous
 author: Kim Burgestrand
 description: |-
-  Software development, and people… but also gaming, juggling,
-  martial arts, and action sports.
+  Heartfelt software development. Sometimes other things.
 title: Kim Burgestrand's website
 url: https://www.burgestrand.se
 
