--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
     "tailwindcss": "^4.0.14"
